--- a/p1/Makefile
+++ b/p1/Makefile
@@ -5,6 +5,6 @@ OBJ = camino
 all: ${OBJ}
 
 ${OBJ}:
-	${CC} ${CXXFLAGS} $@ client.cpp menu.cpp grafo.cpp
+	${CC} ${CXXFLAGS} $@ client.cpp menu.cpp grafo.cpp arbol.cpp nodo.cpp
 clean:
 	rm -f ${OBJ}
